# ez_otlp

./: .gitignore  Dockerfile  README.md  README.zh-cn.md  docker-compose.yaml  makefile  pyproject.toml  template.py
ez_otlp/: __init__.py
ez_otlp/log/: structlog_config.py
ez_otlp/open_telemetry/: env_exporter.py  env_resource.py
signoz/: .env  docker-compose.yaml
signoz/clickhouse-setup/: otel-collector-config.yaml
